<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/transparent">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="centerCrop"
		android:src="@drawable/sign_in_background"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp"/>

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginTop="28dp"
		android:text="@string/app_short_name"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="40sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/startscreen_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginTop="16dp"
		android:text="@string/app_motd"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="15dp"
		android:layout_marginBottom="15dp"
		android:text="@string/app_based_on"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<ProgressBar
		android:id="@+id/startscreenProgress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
