<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BG -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_in_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85888076" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />


    <ImageView
        android:id="@+id/account_avatar"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:elevation="-10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/launchermain_account_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6.9dp"
        android:paddingStart="54dp"
        android:text="User"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switchUserBtn"

        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="14dp"

        android:background="?attr/selectableItemBackground"
        android:onClick="mcaccLogout"
        android:paddingTop="-20dp"
        android:text="@string/main_exit_user"
        android:textSize="8.5sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchermain_account_name" />

    <Button
        android:id="@+id/btnTab2"
        android:layout_width="150dp"
        android:layout_height="51dp"

        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"

        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackground"

        android:clickable="true"
        android:drawableStart="@drawable/ic_menu_settings"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"


        android:text="@string/mcl_option_settings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTab1"
        android:layout_width="170dp"
        android:layout_height="51dp"

        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"

        android:background="?attr/selectableItemBackground"
        android:clickable="true"

        android:drawableStart="@drawable/ic_menu_java"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:text="@string/mcl_tab_console"

        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnTab2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/launchermainTabPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressDownloadBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/progressDownloadText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/progressDownloadText"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:text="@string/global_waiting"
        android:textColor="#ffffff"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        tools:visibility="visible" />


    <Spinner
        android:id="@+id/launchermain_spinner_version"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/launchermainPlayButton"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottom" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/launchermainPlayButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mine_button_background"
        android:onClick="launchGame"
        android:text="@string/main_play"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/launcherMainVersionView"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottom"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/launcherMainVersionView"
        android:layout_width="144dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/global_waiting"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/viewTabSelected"
        android:layout_width="2.5dp"
        android:layout_height="38dp"

        android:layout_marginBottom="6.5dp"
        android:layout_marginLeft="6dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnTab1"
        app:layout_constraintStart_toStartOf="@+id/btnTab1" />


</androidx.constraintlayout.widget.ConstraintLayout>